Fix styles modern.

--- a/www/app/national/templates/idea.html
+++ b/www/app/national/templates/idea.html
@@ -1,25 +1,38 @@
 <div class="quote-wrapper">
-	<p class="quote-text neucha-font text-center">«Беларуская Народная Рэспубліка стала сакральнай ідэяй»</p>
+	<p class="quote-text helvetica-font text-center">«Беларуская Народная Рэспубліка стала сакральнай ідэяй»</p>
 	<p class="quote-author">Зянон Пазьняк</p>
 </div>
 
 <div>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
-	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+
 </div>
