Added info for national chronicle.

--- a/www/app/national/templates/tarashkevich-element.html
+++ b/www/app/national/templates/tarashkevich-element.html
@@ -1,6 +1,6 @@
 <div class="taras-letter antiqua-font">
 	<span>Ь</span>
 </div>
-<div class="taras-grammar">
+<div class="taras-grammar antiqua-font">
 	<p class="text-center">ГРАМАТЫКА ТАРАШКЕВIЧА</p>
 </div>
