Fix for morph missed selected items.

--- a/www/app/national/templates/bssr.html
+++ b/www/app/national/templates/bssr.html
@@ -7,7 +7,8 @@
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
-	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБ<span style="color: red">БНР</span>БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
+	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБ<span style="color: red">БНР</span>БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР
+	</p>
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
 	<p class="bssr-text">БССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССРБССР</p>
