--- a/www/app/national/templates/u-pull.html
+++ b/www/app/national/templates/u-pull.html
@@ -6,7 +6,8 @@
 		Упершыню ў сучаснай беларускай мове асобная літара для гука [w] зьявілася ў сярэдзіне XIX стагодзьдзя ў
 		беларускай лацінцы ў розных варынтах — ú, курсіўнае u, u з гачыкам (ǔ), w̆, ŭ. У вершаванай брашуры Яна Чачота
 		«Da milych mužyczkoú», якая была выдадзеная ў 1846 годзе, літара выглядала як u з рыскай — ú. У Вінцэнта
-		Дуніна-Марцінкевіча выкарыстоўваецца курсіўнае u. Звычайная u на месцы нескладовай зьмешчаная ў публікацыях Кастуся Каліноўскага 1862—1863
+		Дуніна-Марцінкевіча выкарыстоўваецца курсіўнае u. Звычайная u на месцы нескладовай зьмешчаная ў публікацыях
+		Кастуся Каліноўскага 1862—1863
 		гадоў. Сустраканыя таксама варыянты u з гачыкам (ǔ). W з брэвісам (w̆) выкарыстоўваў Браніслаў Эпімах-Шыпіла
 		(1889). У 1897 выдаецца першы том «Люду беларускага» этнографа Міхала Федароўскага; ва ўсім шматтомніку багата
 		аўтэнтычных тэкстаў, запісаных Федароўскім беларускай лацінкай. У гэтых запісах у пазыцыі пасьля галосных гук
