--- a/www/app/national/templates/u.html
+++ b/www/app/national/templates/u.html
@@ -1,9 +1,8 @@
 <div>
-	<span class="u-left antiqua-font">Ў</span>
 	<span class="u-right antiqua-font">Ў</span>
 </div>
 
 <div>
-	<p class="quote-text-repression helvetica-font">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў
+	<p class="quote-text-repression antiqua-font">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў
 		іншых кірылічных алфавітах славянскіх моў.</p>
 </div>
