Fix for code reformat.

--- a/www/app/national/templates/idea.html
+++ b/www/app/national/templates/idea.html
@@ -4,65 +4,35 @@
 </div>
 
 <div>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
-	<p class="orn-font idea-orn">
-		БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУ</p>
 
 </div>
