Added info for soviet and modern period.

--- a/www/app/soviet/templates/reforma.html
+++ b/www/app/soviet/templates/reforma.html
@@ -1,4 +1,6 @@
 <div class="helvetica-font narkom-text">
+	<p><span class="line-through">Эўропа</span> Еўропа</p>
+	<p><span class="line-through">Нямеччына</span> Германія</p>
 	<p><span class="line-through">Артаграфія</span> Арфаграфія</p>
 	<p><span class="line-through">Філязофія</span> Філасофія</p>
 	<p><span class="line-through">Лексікалёгія</span> Лексікалогія</p>
@@ -9,7 +11,4 @@
 	<p><span class="line-through">Плян</span> План</p>
 	<p><span class="line-through">Лёгіка</span> Логіка</p>
 </div>
-<div class="helvetica-font quote-text-repression">
-	Более 20 новых правил, введенных реформой 1933 года, искажали установившиеся нормы белорусского литературного языка
-	путём искусственного наложения на них правил русского языка.
-</div>
+
