Added info and video.

--- a/www/app/modern/templates/mova-pull.html
+++ b/www/app/modern/templates/mova-pull.html
@@ -3,8 +3,8 @@
 </div>
 <div class="row">
 	<p class="pull-review helvetica-font">
-		29 апреля 2008 года постановлением Совета Министров № 765 была утверждена следующая программа переписи (перечень вопросов, по которым осуществляется сбор персональных данных)[3]:
-
+		29 апреля 2008 года постановлением Совета Министров № 765 была утверждена следующая программа переписи (перечень
+		вопросов, по которым осуществляется сбор персональных данных)[3]:
 		Вопросы, касающиеся владения языками:
 		родной язык;
 		язык, на котором респондент обычно разговаривает дома;
