--- a/www/app/national/templates/map-pull.html
+++ b/www/app/national/templates/map-pull.html
@@ -4,16 +4,11 @@
 <div class="row">
 	<p class="pull-review antiqua-font">
 		Рыская мірная дамова была заключаная 18 сакавіка 1921 у Рызе паміж РСФСР і УССР з аднаго боку, і Польшчай з
-		другога.
-
-		Беларускія дэлегацыі ні ад БССР, ні ад БНР не былі дапушчаныя да падрыхтоўкі і падпісаньня дамовы. Аднак польскі
+		другога. Беларускія дэлегацыі ні ад БССР, ні ад БНР не былі дапушчаныя да падрыхтоўкі і падпісаньня дамовы.
+		Аднак польскі
 		гісторык Зьдзіслаў Віньніцкі занатоўвае за Вадзімам Круталевічам, што фармальна бакі вайны не ваявалі зь
-		Беларусьсю, таму беларуская дэлегацыя не магла быць бокам дамовы[1]. Дэлегацыя БССР прысутнічала ў Рызе з самага
-		пачатку перамоваў, але яе паўнамоцтвы не былі прызнаныя польскім бокам. Расейскі бок таксама ня быў зацікаўлены
-		ва ўдзеле беларускіх прадстаўнікоў у працэсе выпрацоўкі пагадненьня, паколькі гэта магло разбурыць дыпляматычную
-		камбінацыю і нават сарваць заключэньне міру (ва ўмовах нежаданьня РСФСР рыхтавацца да зімовай кампаніі). Ад імя
-		БССР выступала РСФСР. БНР апэлявала да вядучых эўрапейскіх дзяржаваў праз Раду амбасадараў у Парыжы, але сябры
-		Антанты падтрымлівалі Польшчу, якая была адным з асноўных элемэнтаў пасьляваеннай вэрсальскай сыстэмы.
+		Беларусьсю, таму беларуская дэлегацыя не магла быць бокам дамовы. Дэлегацыя БССР прысутнічала ў Рызе з самага
+		пачатку перамоваў, але яе паўнамоцтвы не былі прызнаныя польскім бокам. Р\
 	</p>
 </div>
 <!--<div class="row">-->
