--- a/www/app/national/templates/map.html
+++ b/www/app/national/templates/map.html
@@ -1,4 +1,4 @@
-<div>
+<div style="padding-top: 25px;">
 	<p class="map-title truth-font">РЫГА 1921</p>
 	<p class="map-delegation text-center versa-font">ДЭЛЕГАЦЫЯ БНР</p>
 	<p class="map-forbid text-center versa-font">НА ПЕРАМОВЫ НЕ ДАПУШЧАНА</p>
