--- a/www/app/national/templates/repressions-pull.html
+++ b/www/app/national/templates/repressions-pull.html
@@ -6,11 +6,8 @@
 		Паводле няпоўных падлікаў (многія дакумэнты не захаваліся) ахвярамі палітычных рэпрэсіяў у Беларусі ў 1917—1953
 		сталі каля 600 тыс. чал., згодна зь іншымі зьвесткамі — ня менш за 1 млн 400 тыс. чал., зь іх 250 тыс.
 		асуджаныя судовымі ці пакараныя рашэньнямі пазасудовых органаў («двоек», «троек», асобых нарадаў, калегіяў АДПУ,
-		НКУС, Міністэрства дзяржаўнай бясьпекі (МДБ)). Акрамя асуджаных у 1920—1930-я, рэпрэсавана і выслана за межы
-		БССР больш за 250 тыс. «раскулачаных» сялянаў і чальцоў іх сем’яў. У 1917—1953 да найвышэйшай меры пакараньня
-		(расстрэлу) прысуджаныя 358 686 чалавек.
-
-		Усяго з 1954 да пачатку 2000 року ў Беларусі рэабілітавана больш за 200 тыс. ахвяраў палітычных рэпрэсіяў.
+		НКУС, Міністэрства дзяржаўнай бясьпекі (МДБ)). Усяго з 1954 да пачатку 2000 року ў Беларусі рэабілітавана больш
+		за 200 тыс. ахвяраў палітычных рэпрэсіяў.
 	</p>
 </div>
 <!--<div class="row">-->
