--- a/www/app/national/templates/tarashkevich-element-pull.html
+++ b/www/app/national/templates/tarashkevich-element-pull.html
@@ -3,11 +3,8 @@
 </div>
 <div class="row">
 	<p class="pull-review antiqua-font">Школьная граматыка беларускай мовы, апрацаваная Б. Тарашкевічам (1917—1918) і
-		выдадзеная ў Вільні
-		(1918), у паралельных кірыліцкім і лацінскім варыянтах.
-		Граматыка некалькі разоў перавыдавалася ў Заходняй Беларусі (Гл. таксама: Беларуская граматыка
-		Тарашкевіча, выданне 1929 г.), ляжала ў аснове праграм выкладання беларускай мовы ў БССР. Першая
-		жыццяздольная граматыка сучаснай беларускай мовы, аснова ўсіх далейшых ліній развіцця беларускай
+		выдадзеная ў Вільні(1918), у паралельных кірыліцкім і лацінскім варыянтах. Першая жыццяздольная граматыка
+		сучаснай беларускай мовы, аснова ўсіх далейшых ліній развіцця беларускай
 		граматыкі.
 	</p>
 </div>
