--- a/www/app/national/templates/udzelniki.html
+++ b/www/app/national/templates/udzelniki.html
@@ -188,6 +188,36 @@
 		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
 		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
 	</div>
+	<div class="row repression-row">
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+		<div class="col" ng-click="openPopover($event)"><span class="repression-element">i</span></div>
+	</div>
 </div>
 
 <script id="my-popover.html" type="text/ng-template">
