--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -10,6 +10,12 @@
 		должен был отойти к Белорусской ССР, за Польшей оставались только некоторые западные волости.
 	</p>
 </div>
+<iframe width="854"
+        height="480"
+        src="https://www.youtube.com/embed/Ud-nhwpTxjg"
+        frameborder="0"
+        allowfullscreen></iframe>
+
 <!--<div class="row">-->
 <!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
 <!--<button class="button button-balanced">Дадаць</button>-->
