--- a/www/app/national/templates/sluck-pull.html
+++ b/www/app/national/templates/sluck-pull.html
@@ -8,6 +8,12 @@
 		пераважна зь мясцовых сялянаў, аказвалі супраціў наступаўшым савецкім войскам.
 	</p>
 </div>
+<iframe width="854"
+        height="480"
+        src="https://www.youtube.com/embed/92IDnBtjr_g"
+        frameborder="0"
+        allowfullscreen>
+</iframe>
 <!--<div class="row">-->
 <!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
 <!--<button class="button button-balanced">Дадаць</button>-->
