Added switching between chronicles.

--- a/www/app/national/templates/sluck.html
+++ b/www/app/national/templates/sluck.html
@@ -1,2 +1,5 @@
 <div class="national-sluck-title antiqua-font">Слуцкі Збройны Чын</div>
 <div class="national-sluck"></div>
+<button class="button button-dark another-chronicle" ng-click="showActionSheet()">
+	Іншая Хроніка
+</button>
