--- a/www/app/soviet/templates/sluck.html
+++ b/www/app/soviet/templates/sluck.html
@@ -1,2 +1,5 @@
 <div class="soviet-sluck-title truth-font">Слуцкое восстание</div>
 <div class="soviet-sluck"></div>
+<button class="button button-dark another-chronicle" ng-click="showActionSheet()">
+	Іншая Хроніка
+</button>
