--- a/www/css/style.css
+++ b/www/css/style.css
@@ -120,3 +120,15 @@
 	font-size: 20px;
 	padding: 20px 10px;
 }
+
+.another-chronicle {
+	position: absolute;
+	bottom: 15%;
+	left: 42%;
+}
+
+.another-chronicle-modern {
+	position: absolute;
+	top: 17%;
+	right: 11%;
+}
