Added new screens.

--- a/www/app/modern/templates/cheb.html
+++ b/www/app/modern/templates/cheb.html
@@ -1,5 +1,8 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
-	<p class="helvetica-font text-white img-title">Валадарскага</p>
+	<p class="helvetica-font text-white img-title" style="font-size: 22px;padding: 0 35px;line-height: 28px;">
+		Трэцяя ўстаўная грамата была прынятая па адрасе Серпухоўская 9
+		(цяпер гэта Валадарскага 9)
+	</p>
 	<img src="css/img/modern/cheb.jpg"/>
 </div>
