--- a/www/app/soviet/templates/likv.html
+++ b/www/app/soviet/templates/likv.html
@@ -1,4 +1,7 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
+	<p class="truth-font text-white img-title" style="padding: 0 20px;line-height: 40px;">
+		декларационная сдача министрами-эмигрантами своих полномочий в пользу Советской Белоруссии
+	</p>
 	<img src="css/img/repression/likv.jpg"/>
 </div>
